manifests/base/answer.yaml
apiVersion: v1
kind: Service
metadata:
  name: answer
  labels:
    app: answer
    tier: backend
    solution: asqa
    app.kubernetes.io/name: answer
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: asqa
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: answer
    tier: backend
    solution: asqa
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: answer
  labels:
    tier: backend
    solution: asqa
    app.kubernetes.io/name: answer
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: asqa
spec:
  replicas: 1
  revisionHistoryLimit: 3
  serviceName: answer
  selector:
    matchLabels:
      app: answer
      tier: backend
      solution: asqa
  volumeClaimTemplates:
  - metadata:
      name: answer-bentoml-services-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: answer-tmp-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
  template:
    metadata:
      labels:
        app: answer
        tier: backend
        solution: asqa
    spec:
      containers:
      - image: leovs09/asqa-answer:latest # will be set for specific environment
        name: asqa-answer
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: 2
            memory: 4G
            ephemeral-storage: "4Gi"
          limits:
            cpu: 4
            memory: 6G
            ephemeral-storage: "6Gi"
          
        ports:
        - name: main-port
          containerPort: 8080
        - name: health-port
          containerPort: 5001

        volumeMounts:
        - mountPath: "/bentoml"
          name: answer-bentoml-services-storage
        - mountPath: "/tmp" # Need bacause bentoml loads model before extraction to tmp directory
          name: answer-tmp-storage
        
        livenessProbe:
          httpGet:
            path: /livez
            port: health-port
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /livez
            port: health-port
          initialDelaySeconds: 3
          periodSeconds: 5

        startupProbe:
          httpGet:
            path: /livez
            port: health-port
          failureThreshold: 30
          periodSeconds: 40 # 30 * 40 = 1200s = 20m for start
      
      - image: leovs09/asqa-answer2gql:latest # will be set for specific environment
        name: asqa-answer2gql
        
        resources:
          requests:
            cpu: 1
            memory: 128M
          limits:
            cpu: 1
            memory: 256G
          
        ports:
        - name: main-port
          containerPort: 80
        
        livenessProbe:
          httpGet:
            path: /.well-known/apollo/server-health
            port: main-port
      
        readinessProbe:
          httpGet:
            path: /.well-known/apollo/server-health
            port: main-port

        startupProbe:
          httpGet:
            path: /.well-known/apollo/server-health
            port: main-port
          failureThreshold: 10
          periodSeconds: 3 # 10 * 3 = 30s for start
      
      imagePullSecrets:
      - name: docker-hub-creds
