manifests/base/core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  labels:
    tier: backend
    solution: asqa
    app.kubernetes.io/name: core
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: asqa
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: core
      tier: backend
      solution: asqa
  template:
    metadata:
      labels:
        app: core
        tier: backend
        solution: asqa
    spec:
      containers:
      - image: leovs09/asqa-core:latest # will be set for specific environment
        name: core
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: 1
            memory: 512M
          limits:
            cpu: 1
            memory: 1G
          
        ports:
        - name: main-port
          containerPort: 80
        
        livenessProbe:
          httpGet:
            path: /health
            port: main-port
      
        readinessProbe:
          httpGet:
            path: /health
            port: main-port

        startupProbe:
          httpGet:
            path: /health
            port: main-port
          failureThreshold: 30
          periodSeconds: 30 # 30 * 30 = 900s = 15m for start
      imagePullSecrets:
      - name: docker-hub-creds
---
apiVersion: v1
kind: Service
metadata:
  name: core
  labels:
    app: core
    tier: backend
    solution: asqa
    app.kubernetes.io/name: core
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: asqa
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: core
    tier: backend
    solution: asqa
