manifests/base/search.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  labels:
    app: search
    tier: backend
    solution: asqa
    app.kubernetes.io/name: search
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: asqa
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: search
    tier: backend
    solution: asqa

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: search
  labels:
    tier: backend
    solution: asqa
    app.kubernetes.io/name: search
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: asqa
spec:
  replicas: 1
  revisionHistoryLimit: 3
  serviceName: search
  selector:
    matchLabels:
      app: search
      tier: backend
      solution: asqa
  volumeClaimTemplates:
  - metadata:
      name: search-models-cache-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
  template:
    metadata:
      labels:
        app: search
        tier: backend
        solution: asqa
    spec:
      containers:
      - image: leovs09/asqa-search:latest # will be set for specific environment
        name: asqa-search
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: 2
            memory: 10G
            ephemeral-storage: "3Gi"
          limits:
            cpu: 6
            memory: 14G
            ephemeral-storage: "5Gi"
          
        ports:
        - name: main-port
          containerPort: 80
        
        volumeMounts:
        - mountPath: "/cache"
          name: search-models-cache-storage
        
        livenessProbe:
          httpGet:
            path: /is-live
            port: main-port
      
        readinessProbe:
          httpGet:
            path: /is-ready
            port: main-port

        startupProbe:
          httpGet:
            path: /is-ready
            port: main-port
          failureThreshold: 30
          periodSeconds: 40 # 30 * 40 = 1200s = 20m for start
      imagePullSecrets:
      - name: docker-hub-creds
